fix blurry text

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -68,7 +68,6 @@ html,
 body {
   padding: 0;
   margin: 0;
-  @apply font-light;
 }
 
 code {
